# LearnHubDRF

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tests.py  tests_integration.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_created_at_lesson_created_at.py  0004_subscription.py  0005_course_price.py  0006_course_last_updated_alter_course_id_alter_lesson_id_and_more.py
materials/services/: stripe_service.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_stripe_payment_url_user_stripe_session_id.py  0004_payment_stripe_payment_url_payment_stripe_session_id.py  0005_alter_payment_stripe_payment_url.py  0006_alter_payment_id_alter_user_id.py
