[tool.poetry]
name = "learnhubdrf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
django-celery-beat = "^2.8.1"
psycopg2-binary = "^2.9.11"
pillow = "^12.1.0"
djangorestframework = "^3.16.1"
python-dotenv = "^1.2.1"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.13.4"
drf-yasg = "^1.21.14"
stripe = "^14.3.0"
celery = "^5.6.2"
redis = "^7.1.1"
eventlet = "^0.40.4"
django-environ = "^0.13.0"
gunicorn = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
